[gd_scene load_steps=9 format=3 uid="uid://chhnbrqs37sac"]

[ext_resource type="Script" uid="uid://de4dk1xssdj0s" path="res://Scripts/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://b67raobt44pdv" path="res://Systems/weapon_system.tscn" id="2_6t5aa"]
[ext_resource type="PackedScene" uid="uid://bjqnxaauxduyc" path="res://Scenes/hud.tscn" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://bmi8b0i8un8on" path="res://HUD.tscn" id="4_vgqql"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i3pqv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vgqql"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vgqql"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Head/Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_4flbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_onrkg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_i3pqv")

[node name="WeaponSystem" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_6t5aa")]
parent = NodePath("..")

[node name="Head" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5392259, 0)
shape = SubResource("SphereShape3D_vgqql")
disabled = true

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.023787975, 0)

[node name="WeaponHUD" parent="Head/Camera3D" node_paths=PackedStringArray("player") instance=ExtResource("2_onrkg")]
visible = true
player = NodePath("../../..")

[node name="Bullet_RayCast3" type="RayCast3D" parent="Head/Camera3D"]
enabled = false
target_position = Vector3(0, -1, -40)
debug_shape_custom_color = Color(0.6431373, 0.003921569, 0, 1)
debug_shape_thickness = 3

[node name="HUD" parent="." instance=ExtResource("4_vgqql")]
mouse_filter = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vgqql")
